# ir

./: .dockerignore  .gitignore  BUILD.md  CMakeLists.txt  Dockerfile  README.md  crawler.py  crawler_config.yaml  docker-compose.yml  downloader.py
include/containers/: hash_map.hpp  hash_set.hpp
include/database/: mongodb_client.hpp
include/indexing/: indexer.hpp
include/search/: boolean_search.hpp  query_parser.hpp  set_operations.hpp
include/text_processing/: query_tokenizer.hpp  stemmer.hpp  tokenizer.hpp  utf8_converter.hpp
include/web/: server.hpp
src/: main.cpp
src/database/: mongodb_client.cpp
src/indexing/: indexer.cpp
src/search/: boolean_search.cpp  query_parser.cpp
src/text_processing/: query_tokenizer.cpp  stemmer.cpp  tokenizer.cpp  utf8_converter.cpp
src/web/: server.cpp
